--- a/python/CHANGES.txt
+++ b/python/CHANGES.txt
@@ -13,14 +13,14 @@ Release 0.10.0
   ex::
 
     from oktest import ok, test
-    from oktest.context import subject, case_when, case_else
+    from oktest.context import subject, situation
 
     class SampleTestCase(unittest.TestCase):
       SUBJECT = "Sample"
 
       with subject("method1()"):
 
-        with case_when("condition"):
+        with situation("when condition:"):
 
           @test("spec1")
             def _(self):
@@ -30,7 +30,7 @@ Release 0.10.0
           def _(self):
             ...
 
-        with case_else():
+        with situation("else:"):
 
           @test("spec3")
           def _(self):
