--- a/python/CHANGES.txt
+++ b/python/CHANGES.txt
@@ -6,6 +6,32 @@ CHANGES
 Release 0.12.0 (???)
 --------------------
 
+* [enhance] `ok (actual) == expected' now prints difference between
+  actual and expected values with `pprint.pformat()' when values are
+  one of list, tuple, or dict.
+  ex::
+
+    class ExampleTest(unittest.TestCase):
+      def test_ex1(self):
+        expected = { 'username': "Haruhi", 'gender': "Female",
+                     'email': "haruhi@sos-brigade.org", }
+        actual   = { 'username': "Haruhi", 'gender': "female",
+                     'email': "haruhi@sos-brigade.org", }
+        ok (actual) == expected
+    #
+    if __name__ == "__main__":
+      oktest.main()
+
+  Above test script reports such as::
+
+    AssertionError:
+    --- expected
+    +++ actual
+    @@ -1,3 +1,3 @@
+     {'email': 'haruhi@sos-brigade.org',
+    - 'gender': 'Female',
+    + 'gender': 'female',
+      'username': 'Haruhi'}
 
 * [enhance] @at_end decorator registers callback which is invoked after test.
   This is similar to tearDown() method, but more flexible than it.
