--- a/python/CHANGES.txt
+++ b/python/CHANGES.txt
@@ -87,6 +87,18 @@ Release 0.12.0 (???)
   This is similar to ``ok(bool(x)) == False`` but reports ``x`` value
   instead of True/False when assertion failed.
 
+* [enhance] 'oktest.util.from_here()' is defined which adds current
+  path into sys.path temporarily.
+  This is useful very much when you want to import a certain module
+  from current directory or a specific directory.
+  ex::
+
+    from oktest.util import from_here
+    with from_here():
+      import mymodule1       # import from directory path of this file
+    with from_here('../lib'):
+      import mymodule2       # import from ../lib
+
 * [enhance] subject() and situation() now accept user-defined tags.
   ex::
 
