--- a/python/CHANGES.txt
+++ b/python/CHANGES.txt
@@ -6,6 +6,21 @@ CHANGES
 Release 0.12.0 (???)
 --------------------
 
+* [change] '[passed]', '[Failed]', and '[skipped]' are renamed to
+  '[pass]', '[Fail]', '[skip]' respectively.
+
+  Previous output::
+
+    - [passed] 1+1 should be 2.
+    - [Failed] 1-1 should be 0.
+    ## total:1, passed:0, failed:0, error:0, skipped:0, todo:1  (0.000 sec)
+
+  New version output::
+
+    - [pass] 1+1 should be 2.
+    - [Fail] 1-1 should be 0.
+    ## total:1, pass:0, fail:0, error:0, skip:0, todo:1  (0.000 sec)
+
 * [enhance] `ok (actual) == expected' now prints difference between
   actual and expected values with `pprint.pformat()' when values are
   one of list, tuple, or dict.
