--- a/python/CHANGES.txt
+++ b/python/CHANGES.txt
@@ -7,6 +7,13 @@ CHANGES
 Release 0.13.0 (????-??-??)
 ---------------------------
 
+* [enhance] `ok().is_response()' now supports Requests.
+  Example::
+
+      import requests
+      resp = requests.get('http://www.example.com/')
+      ok (resp).is_response(200, 'text/html')
+
 * [enhance] Add 'oktest.wsgi' module to help WSGI Application testing.
   Example::
 
