--- a/python/CHANGES.txt
+++ b/python/CHANGES.txt
@@ -3,6 +3,18 @@
 CHANGES
 =======
 
+Release 0.14.1 (2014-03-11)
+---------------------------
+
+* [enhance] WSGITest class supports `params' parameter.
+  Example::
+
+      from oktest.web import WSGITest
+      http = WSGITest(app)
+      resp = http.GET('/', params={'x':'1'})   # same as http.GET('/', query={'x':'1'})
+      resp = http.POST('/', params={'x':'1'})  # same as http.GET('/', form={'x':'1'})
+
+
 Release 0.14.0 (2014-03-10)
 ---------------------------
 
